--- a/Microblogging/src/app/components/main-page/main-page.component.html
+++ b/Microblogging/src/app/components/main-page/main-page.component.html
@@ -1,3 +1,71 @@
-<p>
-  main-page works!
-</p>
+
+<div class="container col-12 border border-dark">
+  <div class="row col-10 offset-1 justify-content-center border border-dark">
+    <div class="col-3 border mt-5 mb-5 border-dark text-center">
+      <div class="col-4 offset-4 border border-dark" (click)="profilePage()" type="button">
+        Profile
+      </div>
+      <div class="col-4 offset-4 border border-dark" (click)="followPage()" type="button">
+        Followers
+      </div>
+      <div class="col-4 offset-4 border border-dark" (click)="followingPage()" type="button">
+        Following
+      </div>
+    </div>
+    
+    <div class="col-6 mt-5 mb-5 border border-dark">
+      <div class="mt-3 flex border border-dark">
+        <div class="row ml-1 mr-1 justify-content-left">
+          <img src="/..">
+          <h6>Username</h6>
+        </div>
+        <div class="mb-3 border border-dark">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
+          ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+          laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
+          velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
+          sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </div>
+      </div>
+      <div class="mt-3 flex border border-dark">
+        <div class="row ml-1 mr-1 justify-content-left">
+          <img src="/..">
+          <h6>Username</h6>
+        </div>
+        <div class="mb-3 border border-dark">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
+          ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+          laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
+          velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
+          sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </div>
+      </div>
+      <div class="mt-3 flex border border-dark">
+        <div class="row ml-1 mr-1 justify-content-left">
+          <img src="/..">
+          <h6>Username</h6>
+        </div>
+        <div class="mb-3 border border-dark">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
+          ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+          laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
+          velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
+          sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </div>
+      </div>
+      <div class="mt-3 flex border border-dark">
+        <div class="row ml-1 mr-1 justify-content-left">
+          <img src="/..">
+          <h6>Username</h6>
+        </div>
+        <div class="mb-3 border border-dark">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
+          ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+          laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
+          velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
+          sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
