Added modal and more page layout

--- a/Microblogging/src/app/components/main-page/main-page.component.html
+++ b/Microblogging/src/app/components/main-page/main-page.component.html
@@ -1,4 +1,3 @@
-
 <div class="container col-12 border border-dark">
   <div class="row col-10 offset-1 justify-content-center border border-dark">
     <div class="col-3 border mt-5 mb-5 border-dark text-center">
@@ -14,12 +13,13 @@
     </div>
     
     <div class="col-6 mt-5 mb-5 border border-dark">
+      <button class="btn btn-lg btn-outline-primary" (click)="open(mymodal)">Open My Modal</button>
       <div class="mt-3 flex border border-dark">
         <div class="row ml-1 mr-1 justify-content-left">
           <img src="/..">
           <h6>Username</h6>
         </div>
-        <div class="mb-3 border border-dark">
+        <div class="mb-3 border border-dark" maxlength="100">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
           ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
           laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
@@ -27,45 +27,23 @@
           sunt in culpa qui officia deserunt mollit anim id est laborum.
         </div>
       </div>
-      <div class="mt-3 flex border border-dark">
-        <div class="row ml-1 mr-1 justify-content-left">
-          <img src="/..">
-          <h6>Username</h6>
-        </div>
-        <div class="mb-3 border border-dark">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-          ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-          laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
-          velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
-          sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </div>
-      </div>
-      <div class="mt-3 flex border border-dark">
-        <div class="row ml-1 mr-1 justify-content-left">
-          <img src="/..">
-          <h6>Username</h6>
-        </div>
-        <div class="mb-3 border border-dark">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-          ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-          laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
-          velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
-          sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </div>
-      </div>
-      <div class="mt-3 flex border border-dark">
-        <div class="row ml-1 mr-1 justify-content-left">
-          <img src="/..">
-          <h6>Username</h6>
-        </div>
-        <div class="mb-3 border border-dark">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-          ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-          laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
-          velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
-          sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </div>
-      </div>
+
     </div>
   </div>
 </div>
+
+<ng-template #mymodal let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">New Micro</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">×</span>
+    </button>
+  </div>
+  <div class="modal-body justify-content-center">
+    <!-- <textarea rows="6" cols="60" placeholder="Enter your post..." class="form-control" id="content" [(ngModel)]="content" required minlength="1" maxlength="20"></textarea> -->
+    <textarea rows="6" cols="60" placeholder="Enter your post..." class="form-control" id="content" required minlength="1" maxlength="20"></textarea>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-dark" (click)="createMicro()">Ok</button>
+  </div>
+</ng-template>
