--- a/Microblogging/src/app/components/following/following.component.html
+++ b/Microblogging/src/app/components/following/following.component.html
@@ -1,3 +1,12 @@
-<p>
-  following works!
-</p>
+<div>
+  <h3>Following</h3>
+</div>
+
+<div>
+  <ol>
+    <li *ngFor="">
+
+      <button>Unfollow</button>
+    </li>
+  </ol>
+</div>
