--- a/Microblogging/src/app/components/my-followers/my-followers.component.html
+++ b/Microblogging/src/app/components/my-followers/my-followers.component.html
@@ -1,3 +1,12 @@
-<p>
-  my-followers works!
-</p>
+<div class="container">
+  <div class="card col-6 offset-3 mt-5">
+    <div class="card-body">
+      <h3 class="card-title">My Followers</h3>
+      <div class="mt-2 follower-item row" *ngFor="let follower of followers">
+        <div class="col-12 align-self-center">
+          {{follower.username}}
+        </div>       
+      </div>
+    </div>
+  </div>
+</div>
