html for following (not tested yet)

--- a/Microblogging/src/app/components/following/following.component.html
+++ b/Microblogging/src/app/components/following/following.component.html
@@ -4,8 +4,8 @@
 
 <div>
   <ol>
-    <li *ngFor="">
-
+    <li *ngFor="let follow of following">
+      {{follow.username}}
       <button>Unfollow</button>
     </li>
   </ol>
