--- a/Microblogging/src/app/components/navbar/navbar.component.html
+++ b/Microblogging/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,16 @@
 <nav id="navbar" class="navbar navbar-expand-lg">
-    <div class="container-fluid">
-        <h1>MICROS</h1>
-    </div>
+
+    <h1>MICROS</h1>
+
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            
+          <li class="nav-item active">
+            <div class="col-4 offset-4 mt-3 mb-3 p-1 blue-button" routerLink="/home" type="button">
+                Home
+            </div>
+          </li>
+
+        </ul>
+      </div>
 </nav>
