Viewing and editing profile functionally works

--- a/Microblogging/src/app/components/edit-profile/edit-profile.component.html
+++ b/Microblogging/src/app/components/edit-profile/edit-profile.component.html
@@ -5,23 +5,23 @@
                 <h3 class="card-title mr-3">Edit Profile</h3>
             </div>
             <div class="mb-3">
-                <label for="currentUser.username" class="form-label">Username</label>
-                <input id="currentUser.username" class="form-control" type="text" [(ngModel)]="currentUser.username" readonly>
+                <label for="username" class="form-label">Username</label>
+                <input id="username" class="form-control" type="text" [(ngModel)]="username" readonly>
             </div>
             <div class="mb-3">
-                <label for="currentUser.about" class="form-label">About Me</label>
-                <textarea class="form-control" id="currentUser.about" [(ngModel)]="currentUser.about"></textarea>
+                <label for="about" class="form-label">About Me</label>
+                <textarea class="form-control" id="about" [(ngModel)]="about"></textarea>
             </div>
             <div class="mb-3">
-                <label for="currentUser.imageURL" class="form-label">Image URL</label>
-                <input id="currentUser.imageURL" class="form-control" type="url" [(ngModel)]="currentUser.imageURL">
+                <label for="imageURL" class="form-label">Image URL</label>
+                <input id="imageURL" class="form-control" type="url" [(ngModel)]="imageURL">
             </div>
             <div *ngIf="successfulUpdate" class="success-message">
                 Profile successfully updated! Redirecting...
             </div>
             <br>
             <div>
-                <button id="submit" class="rev-btn-confirm mr-2" (click)="updateUser()">Submit</button>
+                <button id="submit" class="rev-btn-confirm mr-2" (click)="updateProfile()">Submit</button>
                 <button class="rev-btn-secondary mr-2" routerLink="/profile">Back to Profile</button>
             </div>
         </div>
