refresh micro board on post; added upload functionality for local images

--- a/Microblogging/src/app/components/main-page/main-page.component.css
+++ b/Microblogging/src/app/components/main-page/main-page.component.css
@@ -30,3 +30,9 @@
 .content {
     font-family: 'Times New Roman', Times, serif;
 }
+
+#profile-photo {
+    height: 100px; 
+    width: 100px; 
+    border-radius: 50%;
+}
