--- a/Microblogging/src/app/components/main-page/main-page.component.html
+++ b/Microblogging/src/app/components/main-page/main-page.component.html
@@ -1,19 +1,14 @@
-<<<<<<< HEAD
 <div class="container col-12">
   <div class="row col-10 offset-1 justify-content-center">
     <div class="col-3 mt-5 mb-5 text-center box-shadow">
       <div>
-        <h1>{{username}}</h1>
-        <h1>username</h1>
+        <img [src]="url" id="profile-photo">
+        <div class="mb-2 mt-2">
+          <button class="btn btn-sm btn-outline-primary" (click)="open(changePhoto)">Change Image</button>
+        </div>
+        <h3>@{{user.username}}</h3>
       </div>
       <div class="col-4 offset-4 mt-3 mb-3 p-1 blue-button" routerLink="/profile" type="button">
-=======
-
-<div class="container col-12 border border-dark">
-  <div class="row col-10 offset-1 justify-content-center border border-dark">
-    <div class="col-3 border mt-5 mb-5 border-dark text-center">
-      <div class="col-4 offset-4 border border-dark" routerLink="/profile" type="button">
->>>>>>> main
         Profile
       </div>
       <div class="col-4 offset-4 mt-3 mb-3 p-1 blue-button" routerLink="/my-followers" type="button">
@@ -28,7 +23,7 @@
     </div>
     <div class="col-6 mt-5 mb-5 box-shadow">
       <div class="mb-2 mt-2">
-        <button class="btn btn-sm btn-outline-primary" (click)="open(mymodal)"><h1>+</h1></button>
+        <button class="btn btn-sm btn-outline-primary" (click)="open(mymodal)"><h6 class="justify-content-center">Post</h6></button>
       </div>
       <hr id="divider">
       <div class="mt-3 mb-3 flex" *ngFor="let item of micros">
@@ -58,5 +53,20 @@
   </div>
   <div class="modal-footer">
     <button id="submit" class="btn btn-outline-dark" (click)="createMicro()">Post</button>
+  </div>
+</ng-template>
+
+<ng-template #changePhoto let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">New Micro</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">×</span>
+    </button>
+  </div>
+  <p class="modal-body justify-content-center">
+    <input type="file" (change)="selectFile($event)">
+  </p>
+  <div class="modal-footer">
+    <button id="submit" class="btn btn-outline-dark" (click)="changeImage()">Change</button>
   </div>
 </ng-template>
