--- a/Microblogging/src/app/components/login/login.component.html
+++ b/Microblogging/src/app/components/login/login.component.html
@@ -19,6 +19,7 @@
             <div>
                 <button type="button" (click)="login()">Login</button>
                 <button type="button" routerLink="/register">Register</button>
+                <button type="button" routerLink="/forgot">Forgot Password</button>
             </div>
         </div>
     </div>
