New search users page. Follow button will not show if the current user shows up in the search results.

--- a/Microblogging/src/app/components/main-page/main-page.component.html
+++ b/Microblogging/src/app/components/main-page/main-page.component.html
@@ -17,6 +17,9 @@
       <div class="col-4 offset-4 mt-3 mb-3 p-1 blue-button" routerLink="/following" type="button">
         Following
       </div>
+      <div class="col-4 offset-4 mt-3 mb-3 p-1 blue-button" routerLink="/search-users" type="button">
+        Search
+      </div>
     </div>
     <div>
       &nbsp;&nbsp;&nbsp;
