--- a/Microblogging/src/app/components/my-followers/my-followers.component.html
+++ b/Microblogging/src/app/components/my-followers/my-followers.component.html
@@ -4,7 +4,7 @@
       <h3 class="card-title">My Followers</h3>
       <div class="mt-2 follower-item row" *ngFor="let follower of followers">
         <div class="col-8 align-self-center">
-          {{follower.username}}
+          {{follower.firstName}} {{follower.lastName}} @{{follower.username}}
         </div>
         <div class="col-4 align-self-center">
           <app-follow-button [user]="follower"></app-follow-button>
