--- a/Microblogging/src/app/components/edit-profile/edit-profile.component.html
+++ b/Microblogging/src/app/components/edit-profile/edit-profile.component.html
@@ -2,11 +2,7 @@
     <div class="card shadow col-6 offset-3">
         <div class="card-body">
             <div class="d-flex align-items-baseline justify-content-between">
-                <h3 class="card-title mr-3">Edit Profile</h3>
-            </div>
-            <div class="mb-3">
-                <label for="username" class="form-label">Username</label>
-                <input id="username" class="form-control" type="text" [(ngModel)]="username" readonly>
+                <h3 class="card-title mr-3">Edit {{username}}'s Profile</h3>
             </div>
             <div class="mb-3">
                 <label for="about" class="form-label">About Me</label>
@@ -21,8 +17,8 @@
             </div>
             <br>
             <div>
-                <button id="submit" class="rev-btn-confirm mr-2" (click)="updateProfile()">Submit</button>
-                <button class="rev-btn-secondary mr-2" routerLink="/profile">Back to Profile</button>
+                <button id="submit" class="rev-btn-confirm blue-button" (click)="updateProfile()">Submit</button>
+                <button class="rev-btn-confirm blue-button" routerLink="/profile">Back to Profile</button>
             </div>
         </div>
     </div>
