--- a/Microblogging/src/app/components/profile-page/profile-page.component.html
+++ b/Microblogging/src/app/components/profile-page/profile-page.component.html
@@ -1,13 +1,12 @@
 <div class="container mt-5">
-  <div class="card shadow col-6 offset-3">
+  <div class="row col-10 offset-1 justify-content-center">
     <div class="card-body">
       <div class="d-flex align-items-baseline justify-content-between">
-        <h3 class="card-title">My Profile</h3>
-        <button class="rev-btn-confirm" style="float:right;" routerLink="/edit-profile">Edit</button>
+        <h3 class="card-title">{{username}}'s Profile<img [src]="imageURL" alt="My_image" width="50" height="50" style="float:left"></h3>
+        <button class="rev-btn-confirm blue-button" style="float:right;" routerLink="/edit-profile">Edit</button>
       </div>
       <div class="mb-3">
-        <label for="username" class="form-label">Username<img [src]="imageURL" alt="My_image" width="42" height="42" style="float:left"></label>
-        <input id="username" class="form-control" type="text" [(ngModel)]="username" readonly>
+        <label for="username" class="form-label">{{firstname}} {{lastname}}</label>
       </div>
       <div class="mb-3">
         <label for="about" class="form-label">About Me</label>
@@ -15,7 +14,8 @@
       </div>
       <br>
       <div>
-        <button class="rev-btn-secondary mr-2" routerLink="/home">Back to Home</button>
+        <button class="col-4 offset-1 mt-1 mb-5 p-1 blue-button" routerLink="/home">Back to Home</button>
+        <button class="col-4 offset-1 mt-1 mb-5 p-1 blue-button" routerLink="/home">Change Password</button>
       </div>
     </div>
   </div>
