Added functionality for user to change password

--- a/Microblogging/src/app/components/profile-page/profile-page.component.html
+++ b/Microblogging/src/app/components/profile-page/profile-page.component.html
@@ -15,7 +15,7 @@
       <br>
       <div>
         <button class="col-4 offset-1 mt-1 mb-5 p-1 blue-button" routerLink="/home">Back to Home</button>
-        <button class="col-4 offset-1 mt-1 mb-5 p-1 blue-button" routerLink="/home">Change Password</button>
+        <button class="col-4 offset-1 mt-1 mb-5 p-1 blue-button" routerLink="/edit-password">Change Password</button>
       </div>
     </div>
   </div>
