--- a/Microblogging/src/app/components/forgot-password/forgot-password.component.html
+++ b/Microblogging/src/app/components/forgot-password/forgot-password.component.html
@@ -15,6 +15,9 @@
                 <input class="form-control" [(ngModel)]="password" type="password" placeholder="Password">
                 <button type="button" (click)="resetPassword()">Reset Password</button>
             </div>
+            <div *ngIf="successfulUpdate" class="success-message">
+                Password successfully updated! Redirecting...
+            </div>
             <br>
             <div>
                 <button type="button" routerLink="/login">Login</button>
