--- a/Microblogging/src/app/components/main-page/main-page.component.css
+++ b/Microblogging/src/app/components/main-page/main-page.component.css
@@ -36,3 +36,9 @@
     width: 100px; 
     border-radius: 50%;
 }
+
+#profile-photo2 {
+    height: 20px; 
+    width: 20px; 
+    border-radius: 50%;
+}
