--- a/Microblogging/src/app/components/main-page/main-page.component.html
+++ b/Microblogging/src/app/components/main-page/main-page.component.html
@@ -31,7 +31,7 @@
       <hr id="divider">
       <div class="mt-3 mb-3 flex" *ngFor="let item of micros">
         <div class="row ml-1 mr-1 justify-content-left">
-          <img src="/..">
+          <img [src]="item.user.imageURL" id="profile-photo2">
           <h6>{{item.user.username}}</h6>
         </div>
         <div class="mb-3 p-2 content">
@@ -51,7 +51,7 @@
     </button>
   </div>
   <div class="modal-body justify-content-center">
-    <textarea rows="6" cols="60" placeholder="Enter your post..." class="form-control" id="content" [(ngModel)]="content" required minlength="1" maxlength="20"></textarea>
+    <textarea rows="6" cols="60" placeholder="Enter your post..." class="form-control" id="content" [(ngModel)]="content" required minlength="1" maxlength="200"></textarea>
   </div>
   <div class="modal-footer">
     <button id="submit" class="btn btn-outline-dark" (click)="createMicro()">Post</button>
