--- a/Microblogging/src/app/components/register/register.component.html
+++ b/Microblogging/src/app/components/register/register.component.html
@@ -26,7 +26,7 @@
             <br>
             <div>
                 <button type="button" (click)="register()">Register</button>
-                <button type="button" routerLink="/login">Login</button>
+                <button type="button" routerLink="/login">Back to Login</button>
             </div>
         </div>
     </div>
