button css and micro board layout adjustment

--- a/Microblogging/src/app/components/follow-button/follow-button.component.html
+++ b/Microblogging/src/app/components/follow-button/follow-button.component.html
@@ -1,2 +1,2 @@
-<button *ngIf="showButton && showFollow" type="button" class="confirm-btn" (click)="followUser()">Follow</button>
-<button *ngIf="showButton && !showFollow" type="button" class="confirm-btn" (click)="unFollowUser()">Unfollow</button>
+<button *ngIf="showButton && showFollow" type="button" class="follow-btn" (click)="followUser()">Follow</button>
+<button *ngIf="showButton && !showFollow" type="button" class="unfollow-btn" (click)="unFollowUser()">Unfollow</button>
