--- a/Microblogging/src/app/components/forgot-password/forgot-password.component.html
+++ b/Microblogging/src/app/components/forgot-password/forgot-password.component.html
@@ -5,7 +5,7 @@
             <div>
                 <label class="form-label">What is your Username?</label>
                 <input class="form-control" [(ngModel)]="username" type="text" placeholder="Username" autofocus>
-                <button type="button" (click)="findUser()">Find User</button>
+                <button class="blue-button mr-2 mt-2" type="button" (click)="findUser()">Find User</button>
             </div>
             <div *ngIf="usernameNotFound" id="error-text">
                 Username not found! Please try again.
@@ -13,15 +13,15 @@
             <div *ngIf="usernameFound">
                 <label class="form-label">New Password</label>
                 <input class="form-control" [(ngModel)]="password" type="password" placeholder="Password">
-                <button type="button" (click)="resetPassword()">Reset Password</button>
+                <button class="blue-button mr-2 mt-2" type="button" (click)="resetPassword()">Reset Password</button>
             </div>
             <div *ngIf="successfulUpdate" class="success-message">
                 Password successfully updated! Redirecting...
             </div>
             <br>
             <div>
-                <button type="button" routerLink="/login">Login</button>
-                <button type="button" routerLink="/register">Register</button>
+                <button class="blue-button mr-2" type="button" routerLink="/login">Back to Login</button>
+                <button class="blue-button mr-2" type="button" routerLink="/register">Back to Register</button>
             </div>
         </div>
     </div>
