--- a/Microblogging/src/app/components/login/login.component.html
+++ b/Microblogging/src/app/components/login/login.component.html
@@ -17,9 +17,9 @@
             </div>
             <br>
             <div>
-                <button type="button" (click)="login()">Login</button>
-                <button type="button" routerLink="/register">Register</button>
-                <button type="button" routerLink="/forgot">Forgot Password</button>
+                <button class="blue-button mr-2" type="button" (click)="login()">Login</button>
+                <button class="blue-button mr-2" type="button" routerLink="/register">Register</button>
+                <button class="blue-button mr-2" type="button" routerLink="/forgot">Forgot Password</button>
             </div>
         </div>
     </div>
