--- a/Microblogging/src/app/components/following/following.component.html
+++ b/Microblogging/src/app/components/following/following.component.html
@@ -4,6 +4,7 @@
       <h3 class="card-title">Following</h3>
       <div class="mt-2 following-item row" *ngFor="let follow of following">
         <div class="col-8 align-self-center">
+          <img [src]="follow.imageURL" class="profile-photo2">
           {{follow.username}}
         </div>
         <div class="col-4 align-self-center">
