--- a/Microblogging/src/app/components/main-page/main-page.component.html
+++ b/Microblogging/src/app/components/main-page/main-page.component.html
@@ -1,23 +1,23 @@
-<div class="container col-12">
-  <div class="row col-10 offset-1 justify-content-center">
-    <div class="col-3 mt-5 mb-5 text-center box-shadow" style="height: 500px;">
+
+  <div class="row col-10 offset-2 justify-content-left">
+    <div class="col-2 mt-5 mb-5 text-center" style="height: 500px;">
       <div>
-        <img [src]="user.imageURL" id="profile-photo">
+        <img [src]="user.imageURL" class="profile-photo">
         <div class="mb-2 mt-2">
           <button class="btn btn-sm btn-outline-primary" (click)="open(changePhoto)">Change Image</button>
         </div>
         <h3>@{{user.username}}</h3>
       </div>
-      <div class="col-4 offset-4 mt-3 mb-3 p-1 blue-button" routerLink="/profile" type="button">
+      <div class="col-4 offset-4 mt-3 mb-3 p-1 blue-button" style="font-size: small;" routerLink="/profile" type="button">
         Profile
       </div>
-      <div class="col-4 offset-4 mt-3 mb-3 p-1 blue-button" routerLink="/my-followers" type="button">
+      <div class="col-4 offset-4 mt-3 mb-3 p-1 blue-button" style="font-size: small;" routerLink="/my-followers" type="button">
         Followers
       </div>
-      <div class="col-4 offset-4 mt-3 mb-3 p-1 blue-button" routerLink="/following" type="button">
+      <div class="col-4 offset-4 mt-3 mb-3 p-1 blue-button" style="font-size: small;" routerLink="/following" type="button">
         Following
       </div>
-      <div class="col-4 offset-4 mt-3 mb-3 p-1 blue-button" routerLink="/search-users" type="button">
+      <div class="col-4 offset-4 mt-3 mb-3 p-1 blue-button" style="font-size: small;" routerLink="/search-users" type="button">
         Search
       </div>
     </div>
@@ -31,7 +31,7 @@
       <hr id="divider">
       <div class="mt-3 mb-3 flex" *ngFor="let item of micros">
         <div class="row ml-1 mr-1 justify-content-left">
-          <img [src]="item.user.imageURL" id="profile-photo2">
+          <img [src]="item.user.imageURL" class="profile-photo2">
           <h6>{{item.user.username}}</h6>
         </div>
         <div class="mb-3 p-2 content">
@@ -41,7 +41,7 @@
       </div>
     </div>
   </div>
-</div>
+
 
 <ng-template #mymodal let-modal>
   <div class="modal-header">
