--- a/Microblogging/src/app/components/navbar/navbar.component.html
+++ b/Microblogging/src/app/components/navbar/navbar.component.html
@@ -6,7 +6,7 @@
         <ul class="navbar-nav">
             
           <li class="nav-item active">
-            <div class="col-4 offset-4 mt-3 mb-3 p-1 blue-button" routerLink="/home" type="button">
+            <div class="col-4 offset-4 mt-3 mb-3 p-1 navItem" routerLink="/home" type="button">
                 Home
             </div>
           </li>
