--- a/Microblogging/src/app/components/register/register.component.html
+++ b/Microblogging/src/app/components/register/register.component.html
@@ -25,8 +25,8 @@
             </div> -->
             <br>
             <div>
-                <button type="button" (click)="register()">Register</button>
-                <button type="button" routerLink="/login">Back to Login</button>
+                <button class="blue-button mr-2" type="button" (click)="register()">Register</button>
+                <button class="blue-button mr-2" type="button" routerLink="/login">Back to Login</button>
             </div>
         </div>
     </div>
