--- a/Microblogging/src/app/components/search-users/search-users.component.html
+++ b/Microblogging/src/app/components/search-users/search-users.component.html
@@ -7,6 +7,7 @@
       </div>
       <div class="mt-2 user-row row" *ngFor="let user of foundUsers">
         <div class="col-8 align-self-center">
+          <img [src]="user.imageURL" class="profile-photo2">
           {{user.firstName}} {{user.lastName}} @{{user.username}}
         </div>
         <div class="col-4 align-self-center">
