--- a/Microblogging/src/styles.css
+++ b/Microblogging/src/styles.css
@@ -5,6 +5,23 @@
     border: 1px solid black;
     transition: all .25s ease-in-out;
     color: white;
+    border-radius: 5px;
+}
+.follow-btn{
+    background-color: #6495ED;
+    box-sizing: border-box;
+    border: 1px solid #6495ED;
+    transition: all .25s ease-in-out;
+    color: white;
+    border-radius: 5px;
+}
+.unfollow-btn{
+    background-color: red;
+    box-sizing: border-box;
+    border: 1px solid red;
+    transition: all .25s ease-in-out;
+    color: white;
+    border-radius: 5px;
 }
 
 .user-row{
@@ -12,4 +29,32 @@
     border-radius: 5px;
     height: 50px;
     padding-left: 10px;
+}
+
+.blue-button {
+    background-color: #6495ED;
+    color: white;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: medium;
+    border-radius: 5px;
+}
+
+.blue-button:hover {
+    background-color: #0085ED;
+}
+
+button {
+    border: none;
+}
+
+.profile-photo {
+    height: 100px; 
+    width: 100px; 
+    border-radius: 50%;
+}
+
+.profile-photo2 {
+    height: 20px; 
+    width: 20px; 
+    border-radius: 50%;
 }
